[package]
name = "check-ip"
version = "0.1.0"
authors = ["kojakatsuma <katsuma.koja@ubiregi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dirs = "3.0"

